apps/grocy/grocy/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocy
  namespace: grocy
spec:
  selector:
    matchLabels:
      app: grocy
  strategy:
    type: Recreate
  template:
    strategy:
      type: Recreate
    metadata:
      labels:
        app: grocy
    spec:
      containers:
        - name: grocy
          image: lscr.io/linuxserver/grocy:4.0.3
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: grocy-config
