apps/grocy/grocy/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grocy
  namespace: grocy
spec:
  type: ClusterIP
  selector:
    app: grocy
  ports:
    - port: 80
      targetPort: 80
