apps/grocy/grocy/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grocy
  namespace: grocy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/my-target: internal
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/16,fd48:e380:751a::/48
spec:
  ingressClassName: nginx
  rules:
    - host: grocy.k8s.jsteuernagel.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: grocy
                port:
                  number: 80
  tls:
    - hosts:
        - grocy.k8s.jsteuernagel.de
      secretName: grocy-k8s-jsteuernagel-de-tls
